--- a/PMP/dataset/pmax24h_out/25020230AHOC.md
+++ b/PMP/dataset/pmax24h_out/25020230AHOC.md
@@ -91,10 +91,8 @@
 |   84 | weibull_min        |             3 | MLE          | Weibull minimum                                                             | True     | [Help](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.weibull_min.html)        |
 |   85 | wrapcauchy         |             3 | MLE          | Wrapped  Cauchy                                                             | True     | [Help](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.wrapcauchy.html)         |
 
-> Gumbel and Lob-Gumbel probability distributions are not shown in the above table.
->
-> n_parameter = # arguments & localization & scale.
->
+> Gumbel and Lob-Gumbel probability distributions are not shown in the above table.  
+> n_parameter = # arguments & localization & scale.  
 > Fit methods: (MLE) maximum likelihood, (MM) L-moments.
 
 
@@ -318,10 +316,6 @@ Best fit for
 |    0 | 25020230AHOC | emp_california   | weibull_min | 0.0511846 | 0.188598 | Δo > Δ, fit |     1 |  52 | 40.0611 | 80.1843 | 3.32067 |          |          |          |          1 |               1 |
 
 
-Estimate extreme values for specific return periods
-
-
-
 #### Empirical: emp_hazen
 
 
@@ -480,10 +474,6 @@ Best fit for
 |   id | station      | empirical_dist   | p_dist   |     delta |   deltao | eval        |   fit |   n |   loc |   scale |    shape | shape1   | shape2   | shape3   |   best_fit |   best_fit_sort |
 |-----:|:-------------|:-----------------|:---------|----------:|---------:|:------------|------:|----:|------:|--------:|---------:|:---------|:---------|:---------|-----------:|----------------:|
 |    0 | 25020230AHOC | emp_hazen        | gompertz | 0.0527601 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
-
-
-Estimate extreme values for specific return periods
-
 
 
 #### Empirical: emp_weibull
@@ -646,10 +636,6 @@ Best fit for
 |    0 | 25020230AHOC | emp_weibull      | gompertz | 0.0504016 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
 
 
-Estimate extreme values for specific return periods
-
-
-
 #### Empirical: emp_beard
 
 
@@ -808,10 +794,6 @@ Best fit for
 |   id | station      | empirical_dist   | p_dist   |     delta |   deltao | eval        |   fit |   n |   loc |   scale |    shape | shape1   | shape2   | shape3   |   best_fit |   best_fit_sort |
 |-----:|:-------------|:-----------------|:---------|----------:|---------:|:------------|------:|----:|------:|--------:|---------:|:---------|:---------|:---------|-----------:|----------------:|
 |    0 | 25020230AHOC | emp_beard        | gompertz | 0.0518533 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
-
-
-Estimate extreme values for specific return periods
-
 
 
 #### Empirical: emp_chegodayev
@@ -974,10 +956,6 @@ Best fit for
 |    0 | 25020230AHOC | emp_chegodayev   | gompertz | 0.0518059 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
 
 
-Estimate extreme values for specific return periods
-
-
-
 #### Empirical: emp_blom
 
 
@@ -1136,10 +1114,6 @@ Best fit for
 |   id | station      | empirical_dist   | p_dist   |    delta |   deltao | eval        |   fit |   n |   loc |   scale |    shape | shape1   | shape2   | shape3   |   best_fit |   best_fit_sort |
 |-----:|:-------------|:-----------------|:---------|---------:|---------:|:------------|------:|----:|------:|--------:|---------:|:---------|:---------|:---------|-----------:|----------------:|
 |    0 | 25020230AHOC | emp_blom         | gompertz | 0.052162 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
-
-
-Estimate extreme values for specific return periods
-
 
 
 #### Empirical: emp_tukey
@@ -1302,10 +1276,6 @@ Best fit for
 |    0 | 25020230AHOC | emp_tukey        | gompertz | 0.0519639 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
 
 
-Estimate extreme values for specific return periods
-
-
-
 #### Empirical: emp_gringorten
 
 
@@ -1464,10 +1434,6 @@ Best fit for
 |   id | station      | empirical_dist   | p_dist   |     delta |   deltao | eval        |   fit |   n |   loc |   scale |    shape | shape1   | shape2   | shape3   |   best_fit |   best_fit_sort |
 |-----:|:-------------|:-----------------|:---------|----------:|---------:|:------------|------:|----:|------:|--------:|---------:|:---------|:---------|:---------|-----------:|----------------:|
 |    0 | 25020230AHOC | emp_gringorten   | gompertz | 0.0524723 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
-
-
-Estimate extreme values for specific return periods
-
 
 
 #### Empirical: emp_jenkinson
@@ -1630,10 +1596,6 @@ Best fit for
 |    0 | 25020230AHOC | emp_jenkinson    | gompertz | 0.0518533 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
 
 
-Estimate extreme values for specific return periods
-
-
-
 #### Empirical: emp_cunnane
 
 
@@ -1792,10 +1754,6 @@ Best fit for
 |   id | station      | empirical_dist   | p_dist   |     delta |   deltao | eval        |   fit |   n |   loc |   scale |    shape | shape1   | shape2   | shape3   |   best_fit |   best_fit_sort |
 |-----:|:-------------|:-----------------|:---------|----------:|---------:|:------------|------:|----:|------:|--------:|---------:|:---------|:---------|:---------|-----------:|----------------:|
 |    0 | 25020230AHOC | emp_cunnane      | gompertz | 0.0522812 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
-
-
-Estimate extreme values for specific return periods
-
 
 
 #### Empirical: emp_adamowski
@@ -1958,7 +1916,7 @@ Best fit for
 |    0 | 25020230AHOC | emp_adamowski    | gompertz | 0.0515696 | 0.188598 | Δo > Δ, fit |     1 |  52 |    62 |  28.363 | 0.138499 |          |          |          |          1 |               1 |
 
 
-Estimate extreme values for specific return periods
+## Estimate extreme values for specific return periods
 |   id |      tr |   prob_l |     prob_g |   alpha |   anglit |   arcsine |   argus |    beta |   betaprime |   bradford |    burr |    chi2 |   cosine |   crystalball |   dgamma |   dweibull |    expon |   exponnorm |   exponpow |   exponweib |       f |   fatiguelife |    fisk |   foldnorm |   gamma |   gausshyper |   genexpon |   gengamma |   genhalflogistic |   geninvgauss |   genlogistic |   gennorm |   genpareto |   gibrat |   gompertz |   gumbel_l |   gumbel_r |   halflogistic |   halfnorm |   hypsecant |   invgamma |   invgauss |   invweibull |   johnsonsb |   johnsonsu |   kappa3 |   kappa4 |   ksone |   kstwobign |   laplace |   laplace_asymmetric |   levy_l |   levy_stable |   loggamma |   logistic |   loglaplace |   lognorm |   loguniform |   lomax |   maxwell |   mielke |   moyal |   nakagami |     ncf |     nct |     ncx2 |    norm |   pareto |   pearson3 |   powerlaw |   rayleigh |   rdist |   recipinvgauss |     rice |   semicircular |   skewnorm |       t |   trapezoid |   triang |   truncexpon |   truncnorm |   truncpareto |   truncweibull_min |   tukeylambda |   uniform |   vonmises_line |    wald |   weibull_min |   wrapcauchy |   zzgumbel |   zzloggumbel | empirical_dist    | station      |   n |   risk_rate |
 |-----:|--------:|---------:|-----------:|--------:|---------:|----------:|--------:|--------:|------------:|-----------:|--------:|--------:|---------:|--------------:|---------:|-----------:|---------:|------------:|-----------:|------------:|--------:|--------------:|--------:|-----------:|--------:|-------------:|-----------:|-----------:|------------------:|--------------:|--------------:|----------:|------------:|---------:|-----------:|-----------:|-----------:|---------------:|-----------:|------------:|-----------:|-----------:|-------------:|------------:|------------:|---------:|---------:|--------:|------------:|----------:|---------------------:|---------:|--------------:|-----------:|-----------:|-------------:|----------:|-------------:|--------:|----------:|---------:|--------:|-----------:|--------:|--------:|---------:|--------:|---------:|-----------:|-----------:|-----------:|--------:|----------------:|---------:|---------------:|-----------:|--------:|------------:|---------:|-------------:|------------:|--------------:|-------------------:|--------------:|----------:|----------------:|--------:|--------------:|-------------:|-----------:|--------------:|:------------------|:-------------|----:|------------:|
 |    0 |    2    | 0.5      | 0.5        | 110.313 |  111.908 |   111.908 | 117.935 | 112.166 |     109.128 |    102.163 | 113.167 | 110.807 |  111.623 |       111.908 |  112.783 |    112.788 |  96.5936 |     111.908 |    62.0018 |     62.7499 | 111.806 |       111.013 | 112.074 |    115.658 | 111.709 |      109.082 |    96.6077 |    63.5559 |           122.921 |       105.282 |       111.811 |   111.461 |     98.0325 |  104.628 |    112.842 |    115.893 |    107.924 |        105.943 |    106.943 |     111.908 |    110.787 |    107.544 |      108.243 |     112.292 |     111.908 |  111.166 |  109.098 | 111     |     106.983 |   111.908 |              111.001 |  95.6457 |       111.908 |    112.223 |    111.908 |      110.73  |   111.908 |      100.563 |  96.726 |   109.834 |  113.159 | 106.637 |    111.87  | 109.076 | 111.745 |  63.2703 | 111.908 |  96.5936 |    112.117 |    96.2624 |    109.098 | 111     |         111.053 |  92.6528 |        111.908 |    111.976 | 111.906 |     135.356 |  110.788 |      101.686 |     111.908 |       90.0389 |            109.458 |       111     |   111     |         111.001 | 104.046 |       111.866 |      114.211 |    118.878 |       105.631 | emp_adamowski     | 25020230AHOC |  52 |    0.75     |
